--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@emailjs/browser": "^4.4.1",
     "@react-pdf/renderer": "^4.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
